--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "warsztat_pieknych_wlosow",
   "private": true,
-  "homepage": "https://karanelus.github.io/warsztat-peknych-wlosow/",
+  "homepage": "https://karaniewskiruslan.github.io/warsztat-peknych-wlosow/",
   "version": "0.0.0",
   "type": "module",
   "scripts": {
