--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router": "^7.1.5",
-    "tailwindcss": "^4.0.6"
+    "tailwindcss": "^4.0.6",
+    "tesseract.js": "^1.0.19",
+    "tesseract.ts": "^1.1.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
