--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@tanstack/react-query": "^5.66.0",
     "axios": "^1.7.9",
     "classnames": "^2.5.1",
+    "framer-motion": "^12.6.2",
     "gh-pages": "^6.3.0",
     "i18next": "^24.2.2",
     "react": "^19.0.0",
