--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,32 +1,42 @@
-name: Build and De
+name: Build and Deploy
 
 on:
   push:
     branches:
       - main
+
+permissions:
+  contents: read
+  pages: write
+  id-token: write
+
 jobs:
   build-and-deploy:
-    env:
-      GOPRIVATE: https://github.com/karaniewskiruslan/warsztat_pieknych_wlosow
     runs-on: ubuntu-latest
-    concurrency: ci-${{github.ref}}
+    concurrency:
+      group: ci-${{ github.ref }}
+      cancel-in-progress: true
+
     steps:
-      - name: Checkout code
+      - name: Checkout repository
         uses: actions/checkout@v3
 
-      - name: Configure Node
+      - name: Setup Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: 18
+          node-version: "18"
           cache: "npm"
 
       - name: Install dependencies
-        run: |
-          npm ci
-          npm run build
+        run: npm ci
 
-      - name: Deploy 🚀
+      - name: Build production assets
+        run: npm run build
+
+      - name: Deploy to GitHub Pages
         uses: JamesIves/github-pages-deploy-action@v4
         with:
           folder: build
           branch: gh-pages
+          clean: true
+          token: ${{ secrets.GITHUB_TOKEN }}
