--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -33,6 +33,9 @@ jobs:
       - name: Build production assets
         run: npm run build
 
+      - name: Run tests
+        run: npm test
+
       - name: Configure Git identity
         run: |
           git config --global user.email "actions@github.com"
