--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router": "^7.1.5",
+    "react-router-dom": "^7.7.1",
     "tailwindcss": "^4.0.6",
     "tesseract.js": "^1.0.19",
     "tesseract.ts": "^1.1.2"
