Some changing in package.json

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "warsztat_pieknych_wlosow",
-  "private": true,
+  "private": false,
   "homepage": "https://karaniewskiruslan.github.io/warsztat_pieknych_wlosow/",
   "version": "1.0.0",
   "type": "module",
