--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "framer-motion": "^12.6.2",
     "gh-pages": "^6.3.0",
     "i18next": "^24.2.2",
+    "immer": "^10.1.1",
     "motion": "^12.6.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
