--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "immer": "^10.1.1",
     "motion": "^12.6.2",
     "react": "^19.0.0",
+    "react-calendar": "^6.0.0",
     "react-dom": "^19.0.0",
     "react-router": "^7.1.5",
     "react-router-dom": "^7.7.1",
