--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "react-router-dom": "^7.7.1",
     "tailwindcss": "^4.0.6",
     "tesseract.js": "^1.0.19",
-    "tesseract.ts": "^1.1.2"
+    "tesseract.ts": "^1.1.2",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.27.2",
