fix: image loading

--- a/package.json
+++ b/package.json
@@ -7,11 +7,15 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
-    "lint": "eslint .",
     "preview": "vite preview",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d dist",
-    "test": "vitest --globals -u"
+    "test": "vitest --globals -u",
+    "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
+    "lint:html": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0 --format html > lint.html",
+    "eslint": "eslint . --cache --cache-location .eslintcache --max-warnings 0 --fix",
+    "tsc": "tsc",
+    "precommit": "npx prettier --write . && npm run eslint && npm run lint && npm run tsc"
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.0.6",
